--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -28,12 +28,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 .nav_logo {
     font-family: 'Pacifico', cursive;
     font-size: 30px;
     color: white;
+    overflow: hidden;
     
     
 
@@ -90,6 +92,7 @@
     height: 50px;
     background-color: rgb(82, 80, 80);
     display: flex;
+    overflow: hidden;
     
     
 
@@ -101,6 +104,7 @@
     
     align-items: center;
     justify-content: space-between;
+    overflow: hidden;
 
 
 
