--- a/src/Components/Products.css
+++ b/src/Components/Products.css
@@ -107,6 +107,7 @@
     border-top-right-radius: 50px;
     border-top-left-radius: 50px;
     height: 100%;
+    overflow: hidden;
 }
 
 .carddescription{
